cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_202.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/passwd.c:180: error: DEAD_STORE
  The value written to &argc (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/passwd.c:180:5: Write of unused value
178.           }
179.       }
180.       argc = opt_num_rest();
           ^
181.       argv = opt_rest();
182.   
